// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersController GET /users with an invalid order by option returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "order_by must be equal to rank",
  ],
  "statusCode": 422,
}
`;

exports[`UsersController GET /users/:id/metrics with a TOTAL request and no time range returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": "Must provide time range for \\"TOTAL\\" requests",
  "statusCode": 422,
}
`;

exports[`UsersController GET /users/:id/metrics with a missing granularity returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "granularity must be a valid enum value",
  ],
  "statusCode": 422,
}
`;

exports[`UsersController GET /users/:id/metrics with a time range for a LIFETIME request returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": "Cannot provide time range for \\"LIFETIME\\" requests",
  "statusCode": 422,
}
`;

exports[`UsersController GET /users/:id/metrics with a time range longer than the supported range returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": "Time range too long",
  "statusCode": 422,
}
`;

exports[`UsersController GET /users/:id/metrics with end but no start returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "start must be a Date instance",
  ],
  "statusCode": 422,
}
`;

exports[`UsersController GET /users/:id/metrics with invalid granularity returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": "\\"granularity\\" must be \\"lifetime\\" or \\"total\\"",
  "statusCode": 422,
}
`;

exports[`UsersController GET /users/:id/metrics with start after end returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": "\\"start\\" must be stricly less than \\"end\\"",
  "statusCode": 422,
}
`;

exports[`UsersController GET /users/:id/metrics with start but no end returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "end must be a Date instance",
  ],
  "statusCode": 422,
}
`;

exports[`UsersController POST /users with empty arguments returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "country_code must be a valid ISO31661 Alpha3 code",
    "email must be an email",
    "graffiti should not be empty",
    "\\"discord\\" or \\"telegram\\" required when registering",
    "\\"discord\\" or \\"telegram\\" required when registering",
  ],
  "statusCode": 422,
}
`;

exports[`UsersController POST /users with missing arguments returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "country_code must be a valid ISO31661 Alpha3 code",
    "email must be an email",
    "graffiti must be a string",
    "graffiti should not be empty",
    "\\"discord\\" or \\"telegram\\" required when registering",
    "\\"discord\\" or \\"telegram\\" required when registering",
  ],
  "statusCode": 422,
}
`;

exports[`UsersController PUT /users/:id with missing fields returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "\\"discord\\", \\"graffiti\\", or \\"telegram\\" required when updating",
    "discord must be a string",
    "\\"discord\\", \\"graffiti\\", or \\"telegram\\" required when updating",
    "graffiti must be a string",
    "\\"discord\\", \\"graffiti\\", or \\"telegram\\" required when updating",
    "telegram must be a string",
  ],
  "statusCode": 422,
}
`;

exports[`UsersController PUT /users/:id with no logged in user returns a 401 1`] = `
Object {
  "message": "Unauthorized",
  "statusCode": 401,
}
`;
